https://developer.berlios.de/bugs/?func=addbug&group_id=6117

Feature requests should be submitted here:
https://developer.berlios.de/feature/?func=addfeature&group_id=6117

Tom Charlesworth
tomch at users.berlios.de


Restrictions/bugs:
- SSI263 emulation is very basic: there is no attempt to emulate rate, inflection or filters.
- During Mockingboard playback, Speaker emulation isn't precise.
- For an original Apple //e, 80-column (PR#3) and INVERSE, it still appears to be mousetext character, but it should be inverted upper-case from $40 to $5F.


1.21.1 - 12 Aug 2012
--------------------
Changes:
. [Feature #4399] Allow Z80 SoftCard to be inserted into slot 4 or 5. (Allows CP/M v3 to work)
. Reworked Configuration (property sheets) to allow multiple hardware changes.
. Updated Help .chm with info on No-Slot clock.

Fixes:
. Floating bus not returned for empty slot $Cnxx addresses. Fixes:
  - A2VGA.DSK: Apple][VGA card detection.
  - [Bug #018643] Mabel's Mansion.
. [Feature #005552] Mouse wasn't working for BeagleWrite / MultiScribe.


1.20.1 - 17 Jul 2011
--------------------
Fixes:
. [Bug #018242] Preserve drive's physical attributes (track, phase) when changing disk. (Fix for Platoon)


1.20.0 - 23 Feb 2011
--------------------
Changes:
. Standard, Text Optimized and Monochrome video modes now support half-pixel rendering accuracy!
. Colors tweaked to better match the real hardware.

Fixes:
. Fixed Mockingboard detection for Ultima III (ProDOS-8/harddisk version).

Debugger:
. See the Debugger_Changelog.txt for the various fixes and changes.

Misc:
. Updated acknowledgements. Cheers to Mike Harvey! (Nibble Magazine)


1.19.3 - 30 Dec 2010
--------------------
Changes:
. Set 50% scan lines as the default.

Fixes:
. Fix OpenFileName dialogs for Win98 (use older WinVer4 struct).
. Edits to the 'Printer dump filename' edit control are now recognised.


1.19.2 - 20 Dec 2010
--------------------
Changes:
. Added HD activity LED.